--- a/src/components/marketing/CTASection.astro
+++ b/src/components/marketing/CTASection.astro
@@ -7,6 +7,7 @@ import Container from '~/components/common/Container.html'
 import Section from '~/components/common/Section.html'
 import Wrapper from '~/components/common/Wrapper.astro'
 import Button from '~/components/common/Button.astro'
+import { getCTALink } from '~/data/get-cta-link'
 
 import IconArrowRight from '~icons/material-symbols/arrow-right-alt-rounded'
 
@@ -23,6 +24,8 @@ const t = useTranslations({
   data: translations?.data,
 })
 
+const ctaLink = await getCTALink(locale)
+
 ---
 
 <div class="relative z-0 bg-indigo-700">
@@ -36,7 +39,7 @@ const t = useTranslations({
       >
         <Button
           as="a"
-          href="/"
+          href={ctaLink}
           hreflang={locale}
           label={t.cta}
           variant="onSurface"
