--- a/src/components/marketing/hero/Images.astro
+++ b/src/components/marketing/hero/Images.astro
@@ -1,23 +1,45 @@
 ---
+import { getEntry } from 'astro:content'
+import SimpleCard from '~/components/product/card/SimpleCard.astro'
+
+const products = await Promise.all([
+  getEntry('product-details', 'pretzels/sweet/with-cream-and-raisins'),
+  getEntry('product-details', 'cookies/cracked-orange-almond'),
+  getEntry('product-details', 'deserts/brownie'),
+  getEntry('product-details', 'deserts/pavlova'),
+])
 
 ---
 
 <div class="lg:min-w-xl">
   <div class="px-4 -mx-4 sm:(mx-0 px-0) lg:hidden">
     <div class="grid auto-cols-75vw auto-flow-col justify-center gap-4 sm:(auto-cols-auto cols-3)">
-      <div class="aspect-square rounded-xl bg-zinc-100"></div>
-      <div class="mt-8 aspect-square rounded-xl bg-zinc-100"></div>
-      <div class="aspect-square rounded-xl bg-zinc-100"></div>
+      {
+        products.slice(1, 4).map(product => (
+          <div class="even:mt-8">
+            <SimpleCard productDetails={product} />
+          </div>
+        ))
+      }
     </div>
   </div>
   <div class="cols-2 hidden gap-4 lg:grid">
-    <div class="flex flex-col gap-inherit">
-      <div class="aspect-square rounded-xl bg-zinc-100"></div>
-      <div class="aspect-square rounded-xl bg-zinc-100"></div>
-    </div>
-    <div class="mt-16 flex flex-col gap-inherit">
-      <div class="aspect-square rounded-xl bg-zinc-100"></div>
-      <div class="aspect-square rounded-xl bg-zinc-100"></div>
-    </div>
+    {() => {
+      const chunks = []
+      const chunkSize = 2
+
+      for (let i = 0; i < products.length; i += chunkSize) {
+        const chunk = products.slice(i, i + chunkSize)
+        chunks.push(chunk)
+      }
+
+      return chunks.map(chunk => (
+        <div class="w-70 flex flex-col gap-inherit last:mt-16">
+          {chunk.map(product => (
+            <SimpleCard productDetails={product} />
+          ))}
+        </div>
+      ))
+    }}
   </div>
 </div>
