--- a/src/components/navigation/footer/Footer.astro
+++ b/src/components/navigation/footer/Footer.astro
@@ -11,8 +11,8 @@ import { getLinkToPage } from '~/data/get-link-to-page'
 
 import IrenaLogo from '~/assets/brand/wordmark.svg'
 import IconFacebook from '~icons/bxl/facebook-circle'
-import IconInstagram from '~icons/bxl/instagram-alt'
-// import IconGithub from '~icons/bxl/github'
+import IconGithub from '~icons/bxl/github'
+// import IconInstagram from '~icons/bxl/instagram-alt'
 
 
 const locale = Astro.currentLocale!
@@ -50,22 +50,26 @@ const privacyLink = await getLinkToPage(locale, 'privacy')
         <div class="flex gap-6">
           <IconButton
             as="a"
-            href="#"
+            href="https://www.facebook.com/irena.cooking/"
+            target="_blank"
+            rel="noopener"
             label="Facebook"
             icon={IconFacebook}
           />
-          <IconButton
+          {/* <IconButton
             as="a"
             href="#"
             label="Instagram"
             icon={IconInstagram}
-          />
-          {/* <IconButton
+          /> */}
+          <IconButton
             as="a"
-            href="/"
+            href="https://github.com/e3stpavel/irena-web/"
+            target="_blank"
+            rel="noopener"
             label="Github"
             icon={IconGithub}
-          /> */}
+          />
         </div>
       </div>
       <div class="grid gap-8 md:cols-3 sm:cols-2">
