--- a/src/components/navigation/footer/Footer.astro
+++ b/src/components/navigation/footer/Footer.astro
@@ -1,17 +1,17 @@
 ---
+import IconFacebook from '~icons/bxl/facebook-circle'
+import IconGithub from '~icons/bxl/github'
 import { Image } from 'astro:assets'
 import { getEntry } from 'astro:content'
 import { useTranslations } from 'astro-nanointl'
-import FooterItem from './FooterItem.astro'
-import IconButton from '~/components/common/IconButton.astro'
-
-import { getNavigationTranslations } from '~/data/get-navigation-translations'
-import { getCategoryLinks } from '~/data/get-category-links'
-import { getLinkToPage } from '~/data/get-link-to-page'
 
 import IrenaLogo from '~/assets/brand/wordmark.svg'
-import IconFacebook from '~icons/bxl/facebook-circle'
-import IconGithub from '~icons/bxl/github'
+import IconButton from '~/components/common/IconButton.astro'
+import { getCategoryLinks } from '~/data/get-category-links'
+
+import { getLinkToPage } from '~/data/get-link-to-page'
+import { getNavigationTranslations } from '~/data/get-navigation-translations'
+import FooterItem from './FooterItem.astro'
 // import IconInstagram from '~icons/bxl/instagram-alt'
 
 
@@ -37,6 +37,7 @@ const t = {
 const categoryLinks = await getCategoryLinks(locale)
 
 const contactsLink = await getLinkToPage(locale, 'contacts')
+const worksLink = await getLinkToPage(locale, 'works')
 const privacyLink = await getLinkToPage(locale, 'privacy')
 
 ---
@@ -89,6 +90,11 @@ const privacyLink = await getLinkToPage(locale, 'privacy')
             <li>
               <FooterItem as="a" href={contactsLink}>
                 { t.contacts }
+              </FooterItem>
+            </li>
+            <li>
+              <FooterItem as="a" href={worksLink}>
+                { t.works }
               </FooterItem>
             </li>
             <li>
