--- a/src/components/product/card/SimpleCard.astro
+++ b/src/components/product/card/SimpleCard.astro
@@ -23,7 +23,7 @@ if (product === undefined) {
 ---
 
 <div class="group relative aspect-square overflow-hidden rounded-xl bg-zinc-100 hover:opacity-75 focus-within:(ring ring-offset-3 ring-indigo-600)">
-  <Image src={productDetails.data.thumbnail} alt={product.data.name} class="size-full object-cover object-center" />
+  <Image src={productDetails.data.thumbnail} alt={product.data.name} class="size-full object-cover object-center" loading="eager" />
   <a href={getRelativeLocaleUrl(locale, product.id.slice(2))} hreflang={locale}>
     <span class="sr-only">Go to { product.data.name } page</span>
     <span class="absolute inset-0" />
