--- a/src/pages/[...locale]/[...categoryId]/[productId].astro
+++ b/src/pages/[...locale]/[...categoryId]/[productId].astro
@@ -53,8 +53,9 @@ const t = useTranslations({
   information: 'Product information',
   composition: 'Composition',
   notes: 'Notes',
+  description: 'Discover this and even more homemade confectionery products from the mini-patisserie "Irena"',
 
-  ogProductTitle: params('{productName}: review, price and how to order. Discover homemade confectionery products from the mini-patisserie "Irena"'),
+  ogProductTitle: params('Buy {productName}: review, composition, price and how to order. Discover homemade confectionery products from the mini-patisserie "Irena"'),
   ogImageAlt: params('A picture with an image of a product from the \'{categoryName}\' category, the name of this category and the logo of the mini-patisserie "Irena"'),
 }, {
   locale,
@@ -77,7 +78,7 @@ const ogImage = await getImage({ src: category.data.ogImage, format: 'webp' })
   <Head
     slot="head"
     title={product.data.name}
-    description="TODO:"
+    description={t.description}
     languageAlternates={altProducts}
     openGraph={{
       basic: {
