--- a/src/pages/[...locale]/[privacy].astro
+++ b/src/pages/[...locale]/[privacy].astro
@@ -89,3 +89,9 @@ const altPages = (
     </div>
   </Container>
 </HomeLayout>
+
+<script>
+import { insertEmail } from '~/utils/email'
+
+insertEmail('#email-placeholder', 'default')
+</script>
