--- a/src/pages/[...locale]/[...categoryId]/[productId].astro
+++ b/src/pages/[...locale]/[...categoryId]/[productId].astro
@@ -109,7 +109,7 @@ const ogImage = await getImage({ src: category.data.ogImage, format: 'webp' })
               <Image src={details.data.thumbnail} alt={product.data.name} class="size-full object-cover object-center" loading="eager" />
             </div>
           </div>
-          <div class="flex-1">
+          <div class="w-full flex-1">
             <div class="lg:w-md">
               <h1 class="text-3xl font-bold tracking-tight sm:text-4xl">{ product.data.name }</h1>
               <div class="mt-4">
